Немного поправил БД для сервера

--- a/nizhnii_on_map/nizhnii/templates/nizhnii/index.html
+++ b/nizhnii_on_map/nizhnii/templates/nizhnii/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Нижний Новгород</title>
 </head>
 <body>
-    <h1>Карта Нижнего Новгорода</h1>
     {{ map|safe }}
 </body>
 </html>
